# Genetic-algorithms

./: .gitignore  README.md  pyproject.toml
heuristic methods/: Laba1.ipynb  Laba2.ipynb  Laba3.ipynb  Laba3.py  Laba3_1.ipynb  Laba5.ipynb  hItest.ipynb  matrix.txt
src/: Evolution.py  Individual.py
src/example notebooks/: Laba8.ipynb
src/utils/: utils.py
